k8s/commerce-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commerce-service
  namespace: ecommerce
  labels:
    app: commerce-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commerce-service
  template:
    metadata:
      labels:
        app: commerce-service
    spec:
      containers:
        - name: commerce-service
          image: ecommerce/commerce-service:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: commerce-service
  namespace: ecommerce
  labels:
    app: commerce-service
spec:
  type: ClusterIP
  selector:
    app: commerce-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
