k8s/identity-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: ecommerce
  labels:
    app: identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: ecommerce/identity-service:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: ecommerce
  labels:
    app: identity-service
spec:
  type: ClusterIP
  selector:
    app: identity-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
